--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "nested"
   ],
   "dependencies": {
-    "sortablejs": "1.10.2"
+    "axios": "^1.2.0",
+    "sortablejs": "1.10.2",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
